project upgraded to spring-boot 3 with security config adjustment