@@ -1,6 +1,5 @@
 package com.disl.boilerplate.config;
 
-import java.util.Arrays;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -15,13 +14,15 @@ import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
+import java.util.List;
+
 @Configuration
 @EnableSwagger2
-public class SwaggerConfig implements WebMvcConfigurer{      
-	
+public class SwaggerConfig implements WebMvcConfigurer {
+
 	@Autowired
 	AppProperties appProperties;
-	
+
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
 
@@ -33,7 +34,7 @@ public class SwaggerConfig implements WebMvcConfigurer{
                 .addResourceHandler("/webjars/**")
                 .addResourceLocations("classpath:/META-INF/resources/webjars/");
     }
-    
+
     @Bean
     public Docket customImplementation() {
         return new Docket(DocumentationType.SWAGGER_2)
@@ -42,10 +43,10 @@ public class SwaggerConfig implements WebMvcConfigurer{
             .apis(RequestHandlerSelectors.any())
             .build()
             .apiInfo(apiInfo())
-            .securitySchemes(Arrays.asList(apiKey()));
+            .securitySchemes(List.of(apiKey()));
 
-    }    
-    
+    }
+
     private ApiKey apiKey() {
         return new ApiKey("jwtToken", "Authorization", "header");
     }
